# repostates

./: .coveragerc  .flake8  .gitignore  .releaserc  CHANGELOG.md  LICENSE  Makefile  README.md  TODO.md  Taskfile.yml  archive.md  pyproject.toml  repostates.py  show.py  tool.py
tests/: test_repostates.py
