[tool.poetry]
name = "microservices-git-state"
version = "0.1.0"
description = ""
authors = ["harper25 <olesjakubb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
flake8-use-fstring = "^1.3"
flake8-comprehensions = "^3.8.0"
toml = "^0.10.2"
black = "^22.1.0"
mypy = "^0.940"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=. --cov-config=.coveragerc --cov-report term"
testpaths = [
    "tests"
]

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]
line_length = 89
use_parentheses = "true"
multi_line_output = 3
include_trailing_comma = true
skip=[".venv"]

[tool.black]
line-length = 89
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.mypy]
exclude = [
    "^one\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^three\.',
    'screen.py',
]
disallow_untyped_defs = true
warn_redundant_casts = true
# ignore_missing_imports = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
strict_optional = true
# pretty = true

[[tool.mypy.overrides]]
module = 'tests.test_repostates'
disallow_untyped_defs = false
disallow_incomplete_defs = true
