[tool.poetry]
name = "microservices-git-state"
version = "1.1.0"
description = ""
authors = ["harper25 <olesjakubb@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
pytest-cov = "^4.0.0"
flake8 = "^7.0.0"
flake8-isort = "^6.0.0"
flake8-use-fstring = "^1.3"
flake8-comprehensions = "^3.8.0"
black = "^24.0.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=. --cov-config=.coveragerc --cov-report term"
testpaths = [
    "tests"
]

[tool.isort]
# isort . --src . --src tests
profile = "black"
src_paths = [".", "tests"]
line_length = 89
use_parentheses = "true"
multi_line_output = 3
include_trailing_comma = true
skip=[".venv"]

[tool.black]
line-length = 89
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
  | foo.py           # also separately exclude a file named foo.py in
  | tool.py          # the root of the project
  | tests/_test_parser.py          # the root of the project
)
'''

[tool.mypy]
exclude = [
    "^one\\.py$",  # TOML's double-quoted strings require escaping backslashes
    'two\.pyi$',  # but TOML's single-quoted strings do not
    '^three\.',
    'screen.py',
    'tool.py',
    'tests/_test_parser.py',
]
disallow_untyped_defs = true
warn_redundant_casts = true
# ignore_missing_imports = true
disallow_any_unimported = true
no_implicit_optional = true
warn_return_any = true
strict_optional = true
# pretty = true

[[tool.mypy.overrides]]
module = 'tests.test_repostates'
disallow_untyped_defs = false
disallow_incomplete_defs = true
